fixed drop down navigation placement on small screens, add styles for single.html share links and hero banner

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -2,12 +2,14 @@
 
 .navigation {
   display: grid;
+  justify-content: flex-end;
   // grid-column: end;
   @media (min-width: 340px) {
     grid-column: end;
   }
   @media (min-width: 549px) {
     grid-column: auto;
+    justify-content: initial;
   }
 }
 
