--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,7 +2,7 @@
 .header {
   grid-column: 1 / -1;
   background-color: $blue;
-  padding: 8px 1rem 8px 0;
+  padding: 8px 6px 8px 0;
 
   @media (min-width: 549px) {
     & {
